@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-23T16:20:06Z",
-  "count_outdated" : 408,
-  "uniques_outdated" : 234,
-  "count" : 433,
-  "uniques" : 250,
+  "timestamp" : "2022-07-24T01:43:44Z",
+  "count_outdated" : 410,
+  "uniques_outdated" : 236,
+  "count" : 436,
+  "uniques" : 252,
   "clones" : [
-    {
-      "timestamp": "2022-07-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-10T00:00:00Z",
       "count": 3,
@@ -91,10 +84,10 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
