@@ -1,12 +1,7 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-07-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-10T00:00:00Z",
       "count": 3,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
